2014.07.24 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Code refactoring (QRinput_Struct_count has been added).
	  - And more code cleanups.
	  - Avoid to add a Structued-append chunk when only one symbol is
	    generated.
	* tests/test_qrinput.c:
	  - New test has been added.
	* qrinput.c, qrencode.1.in:
	  - Added new option, "verbose".

2014.07.08 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c, qrinput.c, tests/test_qrinput.c:
	  - Code cleanups.
	  - Some possible minor bugs has been fixed.

2014.07.07 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Serious typo fix.

2014.07.06 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c, qrencode.1.in:
	  - Added a new image type PNG32 (direct color mode). (Thanks to Greg Hart)

2014.07.04 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* use/config.rpath:
	  - Updated to the newer version bundled with gettext-0.18.3.2.
	* acinclude.m4:
	  - Added iconv.m4, lib-{link,ld,prefix}.m4 for Mac OS.
	* autogen.sh:
	  - mkdir m4 if not exist.
	* qrencode.h:
	  - Fixed some doxygen commands.

2014.06.27 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c, qrencode.1.in:
	  - Merged pull-request #44. (Thanks to Antenore)
	  - Fixed some format issues.

2014.06.22 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrencode.c:
	  - A memory leak bug has been fixed. (Thanks to @win32asm)
	* bitstream.c:
	  - Check return value of BitStream_expand. (PR #46, Thanks to @tklauser)

2014.02.14 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Minor documentation fix.
	* qrenc.c:
	  - Error message improved.

2014.02.09 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* .travis.yaml:
	  - Configuration file for Travis CI. (Thanks to Danil Dörrhöfer)
	* configure.ac:
	  - Fixed some warnings.

2014.01.15 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Merged pull request 78d44fd - commandline argument --help and -V is
	    printed to stdout, instead of stderr.

2014.01.04 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* rsecc.[ch]: